--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h3>"Zure erritmoa, gure pasioa"</h3>
     </header>
     <div class="primary-nav">
-        <button href="#" class="hamburger open-panel nav-toggle" id="menu_open">
+        <button class="hamburger open-panel nav-toggle" id="menu_open">
           <span class="screen-reader-text">Menu</span>
         </button>
         <nav class="menu">
@@ -68,7 +68,7 @@
             <div class="redes-sociales">
                 <a href="https://www.instagram.com/"><img src="img/apps/instagram.png" alt="instagram"></a>
                 <a href="https://www.youtube.com/"><img src="img/apps/youtube.png" alt="youtube" ></a>
-                <a href="https://www.facebook.com/?locale=es_ES"><img src="img/apps/facebook.png"alt="facebook" ></a>
+                <a href="https://www.facebook.com/?locale=es_ES"><img src="img/apps/facebook.png" alt="facebook" ></a>
                 <a href="https://twitter.com/?lang=es"><img src="img/apps/twitter.png" alt="twitter" ></a>
             </div>
 
