Bi html sortuta, eta login orria eginda

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <a href="#" class="logotype">JPAM<span>MUSIC</span></a>
           <div class="overflow-container">
             <ul class="menu-dropdown">
-              <li><a href="#">Dashboard</a></li>
-              <li class="menu-hasdropdown"><a href="#">Settings</a>
-              <li><a href="#">Favourites</a></li>
-              <li><a href="#">Messages</a></li>
+              <li><a href="index.html">Hasiera</a></li>
+              <li class="menu-hasdropdown"><a href="html/artistak.html">Artistak</a>
+                <li><a href="html/albumak.html">Albumak</a></li>
+                <li><a href="php/login.php">Intraneta</a></li>
             </ul>
           </div>
         </nav>
