--- a/html/albumak.html
+++ b/html/albumak.html
@@ -19,13 +19,13 @@
           <span class="screen-reader-text">Menu</span>
         </button>
         <nav class="menu">
-          <a href="#" class="logotype">JPAM<span>MUSIC</span></a>
-          <div class="overflow-container">
+            <a href="../index.html" class="logotype">JPAM<span>MUSIC</span></a>
+            <div class="overflow-container">
             <ul class="menu-dropdown">
               <li><a href="../index.html">Hasiera</a></li>
               <li class="menu-hasdropdown"><a href="artistak.html">Artistak</a>
               <li><a href="albumak.html">Albumak</a></li>
-              <li><a href="#">Intraneta</a></li>
+              <li><a href="../php/login.php">Intraneta</a></li>
             </ul>
           </div>
         </nav>
