--- a/html/albumak.html
+++ b/html/albumak.html
@@ -10,99 +10,99 @@
 </head>
 <body>
     <header>
-        <img id="headerLogoa" src="../img/logo/BlancoTransparente.png" alt="logoa">
-        <h1>JPAM MUSIC</h1>
-        <h3>"Zure erritmoa, gure pasioa"</h3>
+      <img id="headerLogoa" src="../img/logo/BlancoTransparente.png" alt="logoa">
+      <h1>JPAM MUSIC</h1>
+      <h3>"Zure erritmoa, gure pasioa"</h3>
     </header>
     <div class="primary-nav">
-        <button class="hamburger open-panel nav-toggle" id="menu_open">
-          <span class="screen-reader-text">Menu</span>
-        </button>
-        <nav class="menu">
-            <a href="../index.html" class="logotype">JPAM<span>MUSIC</span></a>
-            <div class="overflow-container">
-            <ul class="menu-dropdown">
-              <li><a href="../index.html">Hasiera</a></li>
-              <li class="menu-hasdropdown"><a href="artistak.html">Artistak</a>
-              <li><a href="albumak.html">Albumak</a></li>
-              <li><a href="../php/login.php">Intraneta</a></li>
-            </ul>
-          </div>
-        </nav>
-      </div>
+      <button class="hamburger open-panel nav-toggle" id="menu_open">
+        <span class="screen-reader-text">Menu</span>
+      </button>
+      <nav class="menu">
+        <a href="index.html" class="logotype">JPAM<span>MUSIC</span></a>
+        <div class="overflow-container">
+          <ul class="menu-dropdown">
+            <li><a href="../index.html">Hasiera</a></li>
+            <li><a href="artistak.html">Artistak</a></li>
+            <li><a href="albumak.html">Albumak</a></li>
+            <li><a href="../php/login.php">Intraneta</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
     <main>
         <h1>Artisten Albumen Bilduma Osoa:</h1>
         <div id="zerrenda">
             <div class="lerroa">
                 <div class="kutxak">
                     <a href=""><img src="../img/albumak/11_11.jpg" alt="11:11"></a>
-                    <p>11:11 (Maluma)</p>
+                    <p>11:11</p>
                 </div>
                 <div class="kutxak">
                     <a href=""><img src="../img/albumak/papi_juancho.jpg" alt="papi_juancho"></a>
-                    <p>Papi Juancho (Maluma)</p> 
+                    <p>Papi Juancho</p> 
                 </div>
                 <div class="kutxak">
                     <a href=""><img src="../img/albumak/a_head_full_of_drams.jpg" alt="a_head_full_of_drams"></a>
-                    <p>A Head Full Of Dreams (ColdPlay)</p>
+                    <p>A Head Full Of Dreams</p>
                 </div>
                 <div class="kutxak">
                     <a href=""><img src="../img/albumak/everyday_life.jpg" alt="everyday_life"></a>
-                    <p>Everyday Life (ColdPlay)</p>
+                    <p>Everyday Life</p>
                 </div>
             </div>
             <div class="lerroa">
                 <div class="kutxak">
                     <a href=""><img src="../img/albumak/el_mal_querer.jpg" alt="el_mal_querer"></a>
-                    <p>El Mal Querer (Rosalía)</p>
+                    <p>El Mal Querer</p>
                 </div>
                 <div class="kutxak">
                     <a href=""><img src="../img/albumak/motomami.jpg" alt="motomami"></a>
-                    <p>Motomami (Rosalía)</p>
+                    <p>Motomami</p>
                 </div>
                 <div class="kutxak">
                     <a href=""><img src="../img/albumak/colores.jpg" alt="colores"></a>
-                    <p>Colores (JBalvin)</p>
+                    <p>Colores</p>
                 </div>
                 <div class="kutxak">
                     <a href=""><img src="../img/albumak/vibras.png" alt="vibras"></a>
-                    <p>Vibras (JBalvin)</p>
+                    <p>Vibras</p>
                 </div>
             </div>
             <div class="lerroa">
                 <div class="kutxak">
                     <a href=""><img src="../img/albumak/evolve.jpg" alt="evolve"></a>
-                    <p>Evolve (Imagine Dragons)</p>
+                    <p>Evolve</p>
                 </div>
                 <div class="kutxak">
                     <a href=""><img src="../img/albumak/orings.jpg" alt="orings"></a>
-                    <p>Origins (Imagine Dragons)</p>
+                    <p>Origins</p>
                 </div>
                 <div class="kutxak">
                     <a href=""><img src="../img/albumak/folklore.jpg" alt="folklore"></a>
-                    <p>Folklore (Taylor Swift)</p>
+                    <p>Folklore</p>
                 </div>
                 <div class="kutxak">
                     <a href=""><img src="../img/albumak/red.jpg" alt="red"></a>
-                    <p>Red (Taylor Swift)</p>
+                    <p>Red</p>
                 </div>
             </div>
             <div class="lerroa">
                 <div class="kutxak">
                     <a href=""><img src="../img/albumak/jordi.jpg" alt="jordi"></a>
-                    <p>Jordi (Maroon 5)</p>
+                    <p>Jordi</p>
                 </div>
                 <div class="kutxak">
                     <a href=""><img src="../img/albumak/v.jpg" alt="v"></a>
-                    <p>V (Maroon 5)</p>
+                    <p>V</p>
                 </div>
                 <div class="kutxak">
                     <a href=""><img src="../img/albumak/un_verano_sin_ti.jpg" alt="un_verano_sin_ti"></a>
-                    <p>Un Verano Sin Ti (Bad bunny)</p>
+                    <p>Un Verano Sin Ti</p>
                 </div>
                 <div class="kutxak">
                     <a href=""><img src="../img/albumak/yhlqmdlg.jpg" alt="yhlqmdlg"></a>
-                    <p>YHLQMDLG (Bad bunny)</p>
+                    <p>YHLQMDLG</p>
                 </div>
             </div>
         </div>              
@@ -119,8 +119,8 @@
         </div>
         <div id="footerKutxa2">
             <ul>
-                <li><a href="#">Lege informazioa</a></li>
-                <li><a href="#">Pribatutasun politika</a></li>
+                <li><a href="https://creativecommons.org">Lege informazioa</a></li>
+                <li><a href="https://creativecommons.org">Pribatutasun politika</a></li>
             </ul>
         </div>
         <div id="footerKutxa3">
