--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           <a href="index.html" class="logotype">JPAM<span>MUSIC</span></a>
           <div class="overflow-container">
             <ul class="menu-dropdown">
-              <li><a href="index.html">Hasiera</a></li>
-              <li class="menu-hasdropdown"><a href="html/artistak.html">Artistak</a>
+                <li><a href="index.html">Hasiera</a></li>
+                <li><a href="html/artistak.html">Artistak</a>
                 <li><a href="html/albumak.html">Albumak</a></li>
                 <li><a href="php/login.php">Intraneta</a></li>
             </ul>
@@ -31,19 +31,21 @@
       </div>
     <main>
         <div id="artistak">
-            <p>Begira ezazu gure egungo artistei ezagunenak!</p>
+            <h2>Begira ezazu gure egungo artistei ezagunenak!</h2>
+            <p>Gure egungo artisten talentua esploratu, une honetako eskenean ormaiztekoak direnak</p>
             <div id="artistenIMG">
-                <a href=""><img id="badbunny" src="img/artistak/badbunny.jpg" alt="Bad Bunny"></a>
-                <a href=""><img id="taylor" src="img/artistak/taylorSFT.jpg" alt="Taylor Swift"></a>
-                <a href=""><img id="rosalia" src="img/artistak/rosalia.jpg" alt="Rosalía"></a>
+                <a href="https://es.wikipedia.org/wiki/Bad_Bunny"><img id="badbunny" src="img/artistak/badbunny.jpg" alt="Bad Bunny"></a>
+                <a href="https://es.wikipedia.org/wiki/Taylor_Swift"><img id="taylor" src="img/artistak/taylorSFT.jpg" alt="Taylor Swift"></a>
+                <a href="https://es.wikipedia.org/wiki/Rosalía_(cantante)"><img id="rosalia" src="img/artistak/rosalia.jpg" alt="Rosalía"></a>
             </div>
         </div>
         <div id="albumak">
-            <p>Eta gure albumik entzunenak:</p>
+            <h2>Eta gure albumik entzunenak</h2>
+            <p>Aukeratutako albumen soinuengan sartu, zure entzun-plazerrarako erreserbatuta</p>
             <div id="albumenIMG">
-                <a href=""><img src="img/albumak/harrys_House.jpg" alt="Harry's House"></a>
-                <a href=""><img src="img/albumak/un_verano_sin_ti.jpg" alt="Un verano sin ti"></a>
-                <a href=""><img src="img/albumak/colores.jpg" alt="Colores"></a>
+                <a href="https://es.wikipedia.org/wiki/Harry%27s_House"><img src="img/albumak/harrys_House.jpg" alt="Harry's House"></a>
+                <a href="https://es.wikipedia.org/wiki/Un_verano_sin_ti"><img src="img/albumak/un_verano_sin_ti.jpg" alt="Un verano sin ti"></a>
+                <a href="https://es.wikipedia.org/wiki/Colores_(álbum_de_J_Balvin)"><img src="img/albumak/colores.jpg" alt="Colores"></a>
             </div>
         </div>
 
@@ -60,8 +62,8 @@
         </div>
         <div id="footerKutxa2">
             <ul>
-                <li><a href="#">Lege informazioa</a></li>
-                <li><a href="#">Pribatutasun politika</a></li>
+                <li><a href="https://creativecommons.org">Lege informazioa</a></li>
+                <li><a href="https://creativecommons.org">Pribatutasun politika</a></li>
             </ul>
         </div>
         <div id="footerKutxa3">
