--- a/html/albumak.html
+++ b/html/albumak.html
@@ -35,73 +35,73 @@
         <div id="zerrenda">
             <div class="lerroa">
                 <div class="kutxak">
-                    <a href=""><img src="../img/albumak/11_11.jpg" alt="11:11"></a>
+                    <a href="https://es.wikipedia.org/wiki/11:11_(%C3%A1lbum_de_Maluma)"><img src="../img/albumak/11_11.jpg" alt="11:11"></a>
                     <p>11:11</p>
                 </div>
                 <div class="kutxak">
-                    <a href=""><img src="../img/albumak/papi_juancho.jpg" alt="papi_juancho"></a>
+                    <a href="https://es.wikipedia.org/wiki/Papi_Juancho"><img src="../img/albumak/papi_juancho.jpg" alt="papi_juancho"></a>
                     <p>Papi Juancho</p> 
                 </div>
                 <div class="kutxak">
-                    <a href=""><img src="../img/albumak/a_head_full_of_drams.jpg" alt="a_head_full_of_drams"></a>
+                    <a href="https://es.wikipedia.org/wiki/A_Head_Full_of_Dreams"><img src="../img/albumak/a_head_full_of_drams.jpg" alt="a_head_full_of_drams"></a>
                     <p>A Head Full Of Dreams</p>
                 </div>
                 <div class="kutxak">
-                    <a href=""><img src="../img/albumak/everyday_life.jpg" alt="everyday_life"></a>
+                    <a href="https://es.wikipedia.org/wiki/Everyday_Life"><img src="../img/albumak/everyday_life.jpg" alt="everyday_life"></a>
                     <p>Everyday Life</p>
                 </div>
             </div>
             <div class="lerroa">
                 <div class="kutxak">
-                    <a href=""><img src="../img/albumak/el_mal_querer.jpg" alt="el_mal_querer"></a>
+                    <a href="https://ca.wikipedia.org/wiki/El_mal_querer"><img src="../img/albumak/el_mal_querer.jpg" alt="el_mal_querer"></a>
                     <p>El Mal Querer</p>
                 </div>
                 <div class="kutxak">
-                    <a href=""><img src="../img/albumak/motomami.jpg" alt="motomami"></a>
+                    <a href="https://es.wikipedia.org/wiki/Malamente"><img src="../img/albumak/motomami.jpg" alt="motomami"></a>
                     <p>Motomami</p>
                 </div>
                 <div class="kutxak">
-                    <a href=""><img src="../img/albumak/colores.jpg" alt="colores"></a>
+                    <a href="https://es.wikipedia.org/wiki/Colores_(%C3%A1lbum_de_J_Balvin)"><img src="../img/albumak/colores.jpg" alt="colores"></a>
                     <p>Colores</p>
                 </div>
                 <div class="kutxak">
-                    <a href=""><img src="../img/albumak/vibras.png" alt="vibras"></a>
+                    <a href="https://es.wikipedia.org/wiki/Vibras"><img src="../img/albumak/vibras.png" alt="vibras"></a>
                     <p>Vibras</p>
                 </div>
             </div>
             <div class="lerroa">
                 <div class="kutxak">
-                    <a href=""><img src="../img/albumak/evolve.jpg" alt="evolve"></a>
+                    <a href="https://es.wikipedia.org/wiki/Evolve_(%C3%A1lbum)"><img src="../img/albumak/evolve.jpg" alt="evolve"></a>
                     <p>Evolve</p>
                 </div>
                 <div class="kutxak">
-                    <a href=""><img src="../img/albumak/orings.jpg" alt="orings"></a>
+                    <a href="https://es.wikipedia.org/wiki/Origins_(%C3%A1lbum_de_Imagine_Dragons)"><img src="../img/albumak/orings.jpg" alt="orings"></a>
                     <p>Origins</p>
                 </div>
                 <div class="kutxak">
-                    <a href=""><img src="../img/albumak/folklore.jpg" alt="folklore"></a>
+                    <a href="https://es.wikipedia.org/wiki/Folklore_(%C3%A1lbum_de_Taylor_Swift)"><img src="../img/albumak/folklore.jpg" alt="folklore"></a>
                     <p>Folklore</p>
                 </div>
                 <div class="kutxak">
-                    <a href=""><img src="../img/albumak/red.jpg" alt="red"></a>
+                    <a href="https://es.wikipedia.org/wiki/Red_(%C3%A1lbum_de_Taylor_Swift)"><img src="../img/albumak/red.jpg" alt="red"></a>
                     <p>Red</p>
                 </div>
             </div>
             <div class="lerroa">
                 <div class="kutxak">
-                    <a href=""><img src="../img/albumak/jordi.jpg" alt="jordi"></a>
+                    <a href="https://es.wikipedia.org/wiki/Jordi_(%C3%A1lbum)"><img src="../img/albumak/jordi.jpg" alt="jordi"></a>
                     <p>Jordi</p>
                 </div>
                 <div class="kutxak">
-                    <a href=""><img src="../img/albumak/v.jpg" alt="v"></a>
+                    <a href="https://es.wikipedia.org/wiki/V_(%C3%A1lbum_de_Maroon_5)"><img src="../img/albumak/v.jpg" alt="v"></a>
                     <p>V</p>
                 </div>
                 <div class="kutxak">
-                    <a href=""><img src="../img/albumak/un_verano_sin_ti.jpg" alt="un_verano_sin_ti"></a>
+                    <a href="https://es.wikipedia.org/wiki/Un_verano_sin_ti"><img src="../img/albumak/un_verano_sin_ti.jpg" alt="un_verano_sin_ti"></a>
                     <p>Un Verano Sin Ti</p>
                 </div>
                 <div class="kutxak">
-                    <a href=""><img src="../img/albumak/yhlqmdlg.jpg" alt="yhlqmdlg"></a>
+                    <a href="https://es.wikipedia.org/wiki/YHLQMDLG"><img src="../img/albumak/yhlqmdlg.jpg" alt="yhlqmdlg"></a>
                     <p>YHLQMDLG</p>
                 </div>
             </div>
