--- a/html/artistak.html
+++ b/html/artistak.html
@@ -35,19 +35,19 @@
       <div id="zerrenda">
         <div class="lerroa">
           <div class="artistakutxak">
-            <a href=""
+            <a href="https://es.wikipedia.org/wiki/Bad_Bunny"
               ><img src="../img/artistak/badbunny.jpg" alt="badbunny"
             /></a>
             <p>Bad Bunny</p>
           </div>
           <div class="artistakutxak">
-            <a href=""
+            <a href="https://es.wikipedia.org/wiki/Coldplay"
               ><img src="../img/artistak/coldplay.jpg" alt="colplay"
             /></a>
             <p>Coldplay</p>
           </div>
           <div class="artistakutxak">
-            <a href=""
+            <a href="https://es.wikipedia.org/wiki/Harry_Styles"
               ><img src="../img/artistak/harrystyles.jpg" alt="harry styles"
             /></a>
             <p>Harry Styles</p>
@@ -55,7 +55,7 @@
         </div>
         <div class="lerroa">
           <div class="artistakutxak">
-            <a href=""
+            <a href="https://es.wikipedia.org/wiki/Imagine_Dragons"
               ><img
                 src="../img/artistak/imagineDragon.jpg"
                 alt="imagine dragons"
@@ -63,31 +63,31 @@
             <p>Imagine Dragons</p>
           </div>
           <div class="artistakutxak">
-            <a href=""
+            <a href="https://es.wikipedia.org/wiki/J_Balvin"
               ><img src="../img/artistak/jbalvin.jpg" alt="jbalvin"
             /></a>
             <p>J Balvin</p>
           </div>
           <div class="artistakutxak">
-            <a href=""><img src="../img/artistak/maluma.jpg" alt="maluma" /></a>
+            <a href="https://es.wikipedia.org/wiki/Maluma"><img src="../img/artistak/maluma.jpg" alt="maluma" /></a>
             <p>Maluma</p>
           </div>
         </div>
         <div class="lerroa">
           <div class="artistakutxak">
-            <a href=""
+            <a href="https://es.wikipedia.org/wiki/Maroon_5"
               ><img src="../img/artistak/maroon5.jpg" alt="maroon5"
             /></a>
             <p>Maroon 5</p>
           </div>
           <div class="artistakutxak">
-            <a href=""
+            <a href="https://es.wikipedia.org/wiki/Rosal%C3%ADa_(cantante)"
               ><img src="../img/artistak/rosalia.jpg" alt="rosalia"
             /></a>
             <p>Rosalia</p>
           </div>
           <div class="artistakutxak">
-            <a href=""
+            <a href="https://es.wikipedia.org/wiki/Taylor_Swift"
               ><img src="../img/artistak/taylorSFT.jpg" alt="taylor"
             /></a>
             <p>Taylor Swift</p>
