Komentarioak jarrita eta dena konprobatuta

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="JPAM Music, musika enpresa bat da, artisten albumak eta abestiak eskaintzen dituena">
+    <meta name="author" content="JPAM Enpresa">
+    <meta name="keywords" content="JPAM, jpammusic, music, musica, musika, enpresa, artistak, album">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="img/logo/BlancoTransparente.png">
     <title>JPAM Music</title>
